--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -33,6 +33,5 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   backhand_developer:
-    # Config indicated by + and applies to all files under models/example/
-    example:
+    staging:
       +materialized: view
