--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -24,6 +24,8 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
 
+vars:
+  start_date: '2012-01-02'
 
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
