--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -1,17 +1,10 @@
 
-# Name your project! Project names should contain only lowercase characters
-# and underscores. A good package name should reflect your organization's
-# name or the intended use of these models
 name: 'backhand_developer'
 version: '1.0.0'
 config-version: 2
 
-# This setting configures which "profile" dbt uses for this project.
 profile: 'backhand_developer'
 
-# These configurations specify where dbt should look for different types of files.
-# The `model-paths` config, for example, states that models in this project can be
-# found in the "models/" directory. You probably won't need to change these!
 model-paths: ["models"]
 analysis-paths: ["analyses"]
 test-paths: ["tests"]
@@ -21,24 +14,16 @@ snapshot-paths: ["snapshots"]
 docs-paths: ["docs"]
 asset-paths: ["assets"]
 
-target-path: "target"  # directory which will store compiled SQL files
-clean-targets:         # directories to be removed by `dbt clean`
+target-path: "target"
+clean-targets:
   - "target"
   - "dbt_packages"
 
 vars:
   start_date: '2000-01-03'
 
-# Configuring models
-# Full documentation: https://docs.getdbt.com/docs/configuring-models
-
-# In this example config, we tell dbt to build all models in the example/
-# directory as views. These settings can be overridden in the individual model
-# files using the `{{ config(...) }}` macro.
 models:
   backhand_developer:
     +required_tests: {"unique.*|not_null": 1}
-    staging:
-      +materialized: view
 
 on-run-start: "{{ fix_missing_ranking_dates() }}"
